# chat_app

./: .eslintrc  .gitignore  .prettierrc  jest.config.js  package-lock.json  package.json
API/optimizer/: Cargo.toml  Readme.md
API/optimizer/src/: main.rs
client/chat/: package-lock.json  package.json
client/chat/cypress/integration/tests/: login.spec.js  message.spec.js  signup.spec.js  sugnup.spec.js
client/chat/public/: index.html
client/chat/src/: App.js  index.css  index.js
client/chat/src/components/pages/: Auth.js  Messanger.js
client/chat/src/components/partials/: ChatInput.js  Login.js  Message.js  Sidebar.js  Signup.js  ThreadView.js
client/chat/src/store/: configureStore.js
client/chat/src/store/actions/: accountActions.js  chatActions.js
client/chat/src/store/reducers/: accountReducer.js  authReducer.js  chatReducer.js  index.js
common/models/: thread.json
server/: chat-server.js  process-emitter.js
server/events/: events.js
server/modules/: initialThreads.js  login.js
utils/match/: index.js
utils/match/tests/: math.spec.js
utils/patterns/fuse/: FuseStateObject.js  index.js
utils/patterns/fuse/tests/: fuse.spec.js
utils/performance/: index.js
utils/performance/tests/: perfornamce.spec.js
